--- a/gb/24/1/15/n14158846.md
+++ b/gb/24/1/15/n14158846.md
@@ -3,51 +3,49 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>工程主管欣赏神韵用舞蹈向共产主义说不</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158889-240114210227100731-600x400.jpg" />
-<h6>2024年1月14日下午，建筑工程公司工程总负责人Chas Allen携夫人Patricia观赏了神韵世界艺术团在加州大学伯克利分校泽勒巴克馆的第三场演出。（舒楠／大纪元）
-</h6>
+<h6>2024年1月14日下午，建筑工程公司工程总负责人Chas Allen携夫人Patricia观赏了神韵世界艺术团在加州大学伯克利分校泽勒巴克馆的第三场演出。（舒楠／大纪元）</h6>
 <hr>
 	<p>【大纪元2024年01月15日讯】（大纪元记者舒楠美国伯克利报导）“很高兴看到他们用舞蹈的方式，向共产主义说不。”Chas Allen在看了神韵演出后如是说。</p>
 <p>Allen是一家建筑工程公司的高层住宅工程主管。1月14日，他和太太观赏了神韵世界艺术团在加州大学伯克利分校泽勒巴克馆（Zellerbach Hall）的第三场演出。</p>
 <p>他表示，看神韵演出，让他对中共的信仰迫害“有了更多的了解”。“人们没有自由，但人们正在争取自由。”</p>
 <p>Allen对神韵的整场演出赞不绝口：“全部演出都很好。每个部分都有自己的特点，我们喜欢整场演出。”</p>
-<p>他表示，他和太太Patricia是从电视上看到神韵演出的信息。他说：“我和我的妻子对神韵很感兴趣，她喜欢这样的演出。”Allen还说，他从看到神韵的广告时，就已经开始向他的朋友们介绍神韵演出了。</p>
+<p>他表示，他和太太Patricia是从电视上看到神韵演出的信息。他说：“我和我的妻子对神韵很感兴趣，她喜欢这样的演出。”Allen还说，他从看到神韵的广告时，就已经开始向他的朋友们介绍神韵演出了。
+</p>
 <h2>退役上校：钦佩神韵复兴中国传统文化</h2>
-<figure id="attachment_14158893" aria-describedby="caption-attachment-14158893" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14158893-240114210123100731.jpg"><img decoding="async" class="size-large wp-image-14158893" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158893-240114210123100731-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14158893" class="wp-caption-text">2024年1月14日下午，海军陆战队退役上校Doug McPherson观赏了神韵世界艺术团在加州大学伯克利分校泽勒巴克馆的第三场演出。（舒楠／大纪元）</figcaption></figure>
+<figure id="attachment_14158893" aria-describedby="caption-attachment-14158893" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14158893-240114210123100731.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14158893" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158893-240114210123100731-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14158893" class="wp-caption-text">2024年1月14日下午，海军陆战队退役上校Doug McPherson观赏了神韵世界艺术团在加州大学伯克利分校泽勒巴克馆的第三场演出。（舒楠／大纪元）</figcaption></figure>
 <p>海军陆战队退役上校Doug McPherson观赏了神韵演出后说：“钦佩神韵复兴中国传统文化。”</p>
 <p>他说，中共对信仰的迫害是“可耻的”。他还表示，虽然对中国的信仰了解不多，“但我知道在中国（宗教信仰）受到的了压抑，这很不幸。”</p>
 <p>McPherson是在电视上看到了神韵广告，得知演出的信息。他表示神韵演出“编舞非常美”，“这个演出传递了非常积极的信息。”</p>
 <p>他还表示，他会向自己的同行以及朋友们介绍神韵。</p>
 <p>责任编辑：何臻</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/14/n14158367.md#1">公司老板兼模特赞神韵：仿佛进入梦幻世界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/14/n14158376.md#1">游轮维护承包商：体会到神韵的积极能量</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/14/n14158379.md#1">通用电气高管赞神韵：绝对辉煌的演出！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/14/n14158383.md#1">前汽修厂主赞神韵：中国历史令人回味无穷</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/14/n14158386.md#1">了解法轮大法 公司老板观神韵收获多多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/29/n10438143.md#1" target="_blank">刘晓：共产党“告密者001号”的结局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/6/n11637774.md#1" target="_blank">澳媒刊登希腊裔法轮功学员的修炼故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/16/n10223963.md#1" target="_blank">“西单民主墙”前后的邓小平</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/22/n11273123.md#1" target="_blank">汶川地震山崩地裂的那一刻</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391372.md#1">冬至祈福六宜三不宜  古人迎祥避灾殃的作法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396714.md#1">美国女孩自曝前世死因：飞机撞击帝国大厦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393481.md#1">圣诞传奇：《是的，维吉尼亚，有一个圣诞老人》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/20/n14394956.md#1">【未解之谜】时间是神？验证“天上方一日 地上已千年”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/13/n12686427.md#1">【元曲大家】名闻天下、声震闺阁的郑光祖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396726.md#1">【军事情报局】俄中将身亡 朝军伤亡率已近10%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396454.md#1">【未解之谜】无神论教授濒死带回神的启示 美国将被净化</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/25/n14397280.md#1">【秦鹏观察】没人敢说真话 习军方亲信不见了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/19/n14393938.md#1">父母看过来 6种Costco超值商品可在年节买</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/22/n14395770.md#1">美国排名前十的高薪稳定工作</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/22/n14395790.md#1">中共拒绝让主要调查人员上船检查 瑞典批评</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396610.md#1">上海法院出庭旧照曝光 刘嘉玲成港星第一人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14397235.md#1">齐秦被爆罹患肺癌晚期 歌手姐姐和妻子急回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14397202.md#1">赵薇遭封杀逾3年 其富商丈夫黄有龙被追巨债</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14395896.md#1">中国禁播 娄烨金马奖最佳影片在台湾上映</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396275.md#1">Spotify公布十年来播放量最高的圣诞节歌曲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396859.md#1">马铃薯如何存放6个月？ 英国超市教你</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/22/n14395628.md#1">旅行时如何寻找美食的4个诀窍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396187.md#1">研究：男人和女人羡慕异性什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391805.md#1">营养师破解补钙三误区 九种蔬菜含钙量完胜牛奶</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392285.md#1">琼瑶抉择促人深思 如何应对老年生活挑战</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/1/15/n14158846.htm">工程主管欣赏神韵用舞蹈向共产主义说不</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/1/15/n14158846.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
